--- a/sample.css
+++ b/sample.css
@@ -2,6 +2,26 @@ html {
   height: 100%;
 }
 
+
+header {
+  display: flex;
+  width: 100%;
+  height: 100px;
+  background-color: white;
+  align-items: center;
+  position: fixed;
+}
+ 
+p {
+  padding: 130px 0px;
+  height: 500px;
+}
+ 
+.title {
+  margin-right: auto;
+}
+
+
 body {
   height: 100%;
   margin: 0;
