--- a/sample.css
+++ b/sample.css
@@ -7,7 +7,7 @@ header {
   display: flex;
   width: 100%;
   height: 100px;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: white;
   align-items: center;
   position: fixed;
 }
