--- a/sample.css
+++ b/sample.css
@@ -7,9 +7,9 @@ header {
   display: flex;
   width: 100%;
   height: 100px;
-  background-color: white;
+  background-color: rgba(255,255,255,0.8);
   align-items: center;
-  position: fixed;
+  position: sticky;
 }
  
 p {
