--- a/sample.css
+++ b/sample.css
@@ -10,9 +10,12 @@ header {
   background-color: rgba(255,255,255,0.8);
   align-items: center;
   position: sticky;
-  opacity: 0.3;
 }
- 
+
+h1{
+  background-color: rgba(255,255,255,0.8);
+}
+
 p {
   padding: 130px 0px;
   height: 500px;
