--- a/sample.css
+++ b/sample.css
@@ -6,8 +6,8 @@ html {
 header {
   display: flex;
   width: 100%;
-  height: 100px;
-  background-color: rgba(255,255,255,0.8);
+  height: 15%;
+  /*background-color: rgba(255,255,255,0.8);*/
   align-items: center;
   position: sticky;
 }
