--- a/sample.css
+++ b/sample.css
@@ -3,17 +3,17 @@ html {
 }
 
 
-header {
+.onegai {
   display: flex;
   width: 100%;
   height: 15%;
-  /*background-color: rgba(255,255,255,0.8);*/
+  background-color: rgba(255,255,255,0.7);
   align-items: center;
   position: sticky;
 }
 
 h1{
-  background-color: rgba(255,255,255,0.8);
+  margin:0;
 }
 
 p {
@@ -30,6 +30,7 @@ p {
 body {
   height: 100%;
   margin: 0;
+  padding:0;
 }
 
 .fullheight {
