--- a/sample.css
+++ b/sample.css
@@ -3,7 +3,7 @@ html {
 }
 
 
-.onegai {
+header {
   display: flex;
   width: 100%;
   height: 15%;
@@ -23,7 +23,6 @@ p {
  
 .title {
   margin-right: auto;
-  background-color: rgba(255,255,255,0.8);
 }
 
 
@@ -31,9 +30,4 @@ body {
   height: 100%;
   margin: 0;
   padding:0;
-}
-
-.fullheight {
-  height: 100%;
-  background: #bbddff;
 }
