--- a/sample.css
+++ b/sample.css
@@ -10,8 +10,12 @@ header {
   background-color: rgba(255,255,255,0.7);
   align-items: center;
   position: sticky;
+  z-index: 2;
 }
 
+.map{
+  z-index:1;
+}
 
 body {
   height: 100%;
