--- a/sample.css
+++ b/sample.css
@@ -9,12 +9,17 @@ header {
   height: 15%;
   background-color: rgba(255,255,255,0.7);
   align-items: center;
-  position: sticky;
-  z-index: 2;
+  position: fixed;
+  z-index: 9999;
 }
 
 .map{
-  z-index:1;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 body {
