--- a/sample.css
+++ b/sample.css
@@ -6,11 +6,15 @@ html {
 header {
   display: flex;
   width: 100%;
-  height: 15%;
+  height: 20%;
   background-color: rgba(255,255,255,0.7);
   align-items: center;
   position: fixed;
   z-index: 9999;
+}
+
+h1{
+  text-aling:center;
 }
 
 .map{
