--- a/sample.css
+++ b/sample.css
@@ -1,12 +1,12 @@
 html {
   height: 100%;
-  width:auto;
+  width: 100%;
 }
 
 
 header {
   display: flex;
-  width: auto;
+  width: 100%;
   height: 15%;
   background-color: rgba(255,255,255,0.7);
   align-items: center;
@@ -35,7 +35,7 @@ h1{
 
 body {
   height: 100%;
-  width:auto;
+  width:100%;
   margin: 0;
   padding:0;
 }
