--- a/sample.css
+++ b/sample.css
@@ -11,7 +11,7 @@ header {
   background-color: rgba(255,255,255,0.7);
   align-items: center;
   position: fixed;
-  z-index: 9999;
+  z-index: 1000; /*最前面に*/
 }
 
 h1{
@@ -21,47 +21,61 @@ h1{
 
 .logo{
   width:100%;
-  text-algin:center;
   display: block;
   height: auto;
 }
 
 .map{
   height: 100%;
-  position: absolute;
-  top: 0;
+  position: relative;
+  /* top: 0;
   right: 0;
   bottom: 0;
-  left: 0;
+  left: 0; */
 }
 
 body {
+  /* position: absolute; */
   height: 100%;
   width:100%;
   margin: 0;
   padding:0;
 }
 
-
-.divicon1{ 
-  /* background:white; */
+.divicon_koaza{ 
   text-align: center;
-  /* font-size: 12px; */
-  /* text-stroke: 1px #8b0000; */
-  
-  /* color:#000; */
-  /* -webkit-text-stroke: 0.1px #fff;
-  -webkit-text-stroke-width: 2px;
-  -webkit-text-fill-color: #000; */
-
 
   font-family: "Noto Sans JP", sans-serif;
   font-optical-sizing: auto;
   font-weight: 900;
   font-style: normal;
+  font-size:auto;
 
-  /* font-family:'Zen Maru Gothic', serif; */
-  color: #000;
+  position:absolute;
+  z-index: 0;
+
+  color: #ff5b5b;
+  opacity: 0.9;
   text-shadow: 1px 1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff, -1px -1px 0 #fff;
-
 }
+
+.divicon_oaza{ 
+  text-align: center;
+
+  font-family: "Noto Sans JP", sans-serif;
+  /* font-optical-sizing: auto; */
+  font-weight: 900;
+  font-style: normal;
+  font-size:1.5em;
+
+  position:absolute;
+  z-index: 900;
+
+  color: #0048e4;
+  opacity: 0.7;
+  text-shadow: 1px 1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff, -1px -1px 0 #fff;
+}
+
+/* .leaflet-control-layers-toggle{
+  z-index: 9999;
+} */
