--- a/style.css
+++ b/style.css
@@ -26,6 +26,14 @@ h1 {
   position: relative;
 }
 
+/*不透明度スケール*/
+.opacitySlider { 
+  position: absolute; 
+  top: 10px; 
+  right: 10px; 
+  z-index: 1000;
+}
+
 .divicon_koaza, .divicon_oaza {
   text-align: center;
   font-family: "Noto Sans JP", sans-serif;
@@ -60,4 +68,26 @@ h1 {
   .map {
     height: calc(100% - 60px); /* ヘッダーの高さを引いた値に調整 */
   }
+
+  .divicon_koaza, .divicon_oaza {
+    text-align: center;
+    font-family: "Noto Sans JP", sans-serif;
+    font-weight: 900;
+    position: absolute;
+    text-shadow: 1px 1px 0 #fff, -1px 1px 0 #fff, 1px -1px 0 #fff, -1px -1px 0 #fff;
+  }
+  
+  .divicon_koaza {
+    color: #000000;
+    opacity: 0.9;
+    font-size: 1.5em;
+  }
+  
+  .divicon_oaza {
+    color: #0048e4;
+    opacity: 0.7;
+    font-size: 1.5em;
+  }
+
+
 }
